kubernetes/production/network-policy/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata: 
  name: default-deny-ingress 
  namespace: production 
spec: 
  podSelector:
    {}
  policytypes: 
  - Ingress

---

apiVersion: network.k8s.io/v1 
kind: NetworkPolicy 
metadata: 
  name: backend-netpol 
  namespace: production
spec: 
  podSelector: 
    matchLabels: 
      app: app-backend 
      tier: database 
  policytypes: 
  - Ingress:
  ingress:
  - from: 
    - podSelector: 
        matchLabels: 
          app: app-frontend 
          tier: frontend
    ports: 
    - protocol: TCP 
      ports: 3306

#frontend network policy 
---
apiVersion: network.k8s.io/v1 
kind: NetworkPolicy 
metadata: 
  name: frontend-netpol 
  namespace: production
spec: 
  podSelector: 
    matchLabels: 
      app: app-frontend 
      tier: frontend
  policytypes: 
  - Ingress:
  - Egress: 
  ingress:
  # Allow ingress from Traefik 
  - from: 
    - namespaceSelector: 
        matchLabels:
          name: kube-system 
    ports: 
    - protocol: TCP 
      port: 80 
  
  egress:
  # Allow egress to backend pods 
  - to:
    - podSelector: 
        matchLabels: 
          app: app-backend 
          tier: database
    ports:
    - protocol: TCP 
      ports: 3306 
  - to: []
    ports: 
    - protocol: TCP 
      port: 53 
    - protocol: UDP 
      port: 53 

---
# Backend network policy 
apiVersion: network.k8s.io/v1 
kind: NetworkPolicy 
metadata: 
  name; 


---
# MySQL network policy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-netpol
  namespace: production
spec:
  podSelector:
    matchLabels:
      app: mysql
      tier: database
  policyTypes:
  - Ingress
  - Egress
  ingress:
  # Allow ingress from backend only
  - from:
    - podSelector:
        matchLabels:
          app: backend
          tier: api
    ports:
    - protocol: TCP
      port: 3306
  egress:
